facet-macros-emit/tests/snapshots/codegen__generic_bounds.snap
---
source: facet-macros-emit/tests/codegen.rs
expression: "expand(r#\"\n        struct Foo<T> where T: Copy {\n            inner: Vec<T>,\n        }\n        \"#)"
---
#[doc = " where_clauses: \"where T: Copy,\""]
#[doc = " generics_def: \"T\""]
#[doc = " generics_use: \"T\""]
#[automatically_derived]
unsafe impl<T> ::facet::Facet for Foo<T>
where
    T: Copy,
{
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [::facet::Field::builder()
                .name("inner")
                .shape(|| ::facet::shape_of(&|s: &Foo<T>| &s.inner))
                .offset(::core::mem::offset_of!(Foo<T>, inner))
                .flags(::facet::FieldFlags::EMPTY)
                .attributes(&const { [] })
                .build()]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f, "Foo"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::Struct::builder()
                    .kind(::facet::StructKind::Struct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
