facet-macros-emit/tests/snapshots/codegen__opaque_arc.snap
---
source: facet-macros-emit/tests/codegen.rs
expression: "expand(r#\"\n        #[derive(Facet)]\n        pub struct Handle(#[facet(opaque)] std::sync::Arc<NotDerivingFacet>);\n        \"#)"
---
#[used]
static HANDLE_SHAPE: &'static ::facet::Shape = <Handle as ::facet::Facet>::SHAPE;
#[automatically_derived]
unsafe impl<'__facet> ::facet::Facet<'__facet> for Handle {
    const SHAPE: &'static ::facet::Shape = &const {
        let fields: &'static [::facet::Field] = &const {
            [::facet::Field::builder()
                .name("0")
                .shape(|| ::facet::shape_of_opaque(&|s: &Handle| &s.0))
                .offset(::core::mem::offset_of!(Handle, 0))
                .flags(::facet::FieldFlags::EMPTY)
                .attributes(&const { [] })
                .build()]
        };
        let vtable = &const {
            let mut vtable =
                ::facet::value_vtable_inner!(Self, |f, _opts| ::core::fmt::Write::write_str(
                    f, "Handle"
                ));
            vtable
        };
        ::facet::Shape::builder()
            .id(::facet::ConstTypeId::of::<Self>())
            .layout(::core::alloc::Layout::new::<Self>())
            .vtable(vtable)
            .def(::facet::Def::Struct(
                ::facet::StructDef::builder()
                    .kind(::facet::StructKind::TupleStruct)
                    .fields(fields)
                    .build(),
            ))
            .build()
    };
}
